<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:theme="@style/AppTheme">

    <LinearLayout
        style="@style/HeaderTextStyle"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <EditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:autofillHints=""
            android:hint="@string/your_name"
            android:inputType="text"
            android:paddingTop="20dp" />

        <TextView
            style="@style/HeaderTextStyle"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:text="@string/toppings"
            android:textColor="@android:color/white" />

        <CheckBox
            android:id="@+id/checkCream"
            style="@style/HeaderTextStyle"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="24dp"
            android:text="@string/whipped_cream_rs_1"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/checkChocolate"
            style="@style/HeaderTextStyle"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="24dp"
            android:text="@string/cholocate_cream_rs_2"
            android:textSize="16sp" />

        <TextView
            style="@style/HeaderTextStyle"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:text="@string/quantity"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:onClick="increment"
                android:text="@string/plus"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/value"
                style="@style/HeaderTextStyle"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/_0"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:onClick="decrement"
                android:text="@string/minus"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                style="@style/TextAppearance.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:onClick="submitOrder"
                android:text="@string/order"
                android:textStyle="bold" />

            <Button
                style="@style/TextAppearance.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:onClick="reset"
                android:text="@string/reset"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>






